# FinalStrike

./: .gitignore  AGENTS.md  LICENSE  PLAN.html  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: LOCAL_SETUP.md  PHASE_GAPS.md  test-explorer.html
docs/verification/p2-p3/: demo-exit.txt  health-check.txt  run-full-layers.json  verification-summary.md
finalstrike/: __init__.py  doctor.py  phase_status.py
finalstrike/cli/: main.py
finalstrike/computer_use/: __init__.py  actions.py  executor.py  loop.py  prompt.py  urls.py
finalstrike/computer_use/platform/: __init__.py  a11y.py  input.py  screenshot.py
finalstrike/config/: __init__.py  acceptance.py  agents.py  context.py  environment.py  export_schemas.py  loader.py  models.py  plan.py  secrets.py
finalstrike/env/: __init__.py  health.py  orchestrator.py  state.py
finalstrike/evidence/: __init__.py  gap_analyzer.py  recorder.py  session.py  store.py
finalstrike/orchestrator/: __init__.py  layers.py  run.py
finalstrike/planner/: __init__.py  planner.py  prompt.py
finalstrike/providers/: live.py  openai_compat.py
finalstrike/reporters/: __init__.py  html.py  slack.py
finalstrike/runners/: __init__.py  api.py  build.py  command.py  pytest_parser.py  terminal.py
fixtures/sample-app/: AGENTS.md  README.md  acceptance-full.md  acceptance.md  capabilities.yaml  finalstrike.yaml
fixtures/sample-app/sample_app/: __init__.py  server.py
fixtures/sample-app/static/: index.html  tasks.html
fixtures/sample-app/static/settings/: index.html
fixtures/sample-app/static/tasks/: detail.html  index.html
fixtures/sample-app/tests/: test_server.py
schemas/: finalstrike.schema.json  run_result.schema.json  verification_plan.schema.json
scripts/: setup-dev.sh
templates/: report.html.j2
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_config_overrides.py  test_fixture_policy.py  test_openai_compat.py  test_p10_orchestrator.py  test_p1_context.py  test_p2_env.py  test_p3_runners.py  test_p4_api.py  test_p5_planner.py  test_p5_planner_integration.py  test_p5_planner_live.py  test_p6_computer_use.py  test_p6_computer_use_input.py  test_p6_computer_use_integration.py  test_p6_computer_use_live.py  test_p6_computer_use_loop_cleanup.py  test_p6_computer_use_title.py  test_p7_evidence.py  test_p8_html_report.py  test_p9_slack_report.py  test_phase_guardrails.py  test_schemas.py
tests/fixtures/cassette-smoke-v1/: finalstrike.yaml
tests/fixtures/run-result-sample/: result.json
tests/llm_recordings/: README.md
tests/llm_recordings/computer_use/: .gitkeep
tests/llm_recordings/planner/smoke-v1/: messages.json  meta.yaml  plan.canonical.json  responses.json
tests/support/: __init__.py  llm_cassette.py  plan_assertions.py
