[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finalstrike"
version = "0.1.0"
description = "Cursor cloud agent testing mirror — orchestrator and evidence recorder"
readme = "README.md"
requires-python = ">=3.11"
license = "PolyForm-Noncommercial-1.0.0"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
finalstrike = "finalstrike.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["finalstrike"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that start real services or network listeners",
    "llm_cassette: replay committed LLM recordings (deterministic CI)",
    "requires_ollama: needs Ollama at http://localhost:11434 (P5 planner integration)",
    "requires_platform_tools: needs ffmpeg and xdotool or ydotool (P6/P7)",
]
